--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ llama-index = "*"
 openai = "*"
 pinecone-client = "*"
 python-dotenv = "*"
+black = "*"
+python-magic = "*"
+python-magic-bin = "*"
+streamlit = "*"
 
 [dev-packages]
 
